--- a/pom.xml
+++ b/pom.xml
@@ -8,15 +8,14 @@
         <version>2.1.6.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>be.example</groupId>
-    <artifactId>SpringBootBase</artifactId>
+    <groupId>be.hackinthewoods</groupId>
+    <artifactId>child-focus-backend</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>war</packaging>
-    <name>SpringBootBase</name>
-    <description>SpringBootBase project</description>
+    <name>child-focus-backend</name>
 
     <properties>
-        <java.version>1.8</java.version>
+        <java.version>11</java.version>
     </properties>
 
     <dependencies>
