Moved files in appropriate package + changed database configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
 # PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/Example
+spring.datasource.url=jdbc:postgresql://localhost:5432/child-focus-backend
 spring.datasource.username=postgres
 spring.datasource.password=root
 
