--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,6 @@ spring.jpa.hibernate.ddl-auto=create
 
 # Liquibase
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.yaml
+
+# Firebase
+firebase.url=https://child-focus-backend.firebaseio.com
