--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 
 # drop n create table again, good for testing, comment this in production
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 # Liquibase
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.yaml
@@ -24,3 +24,13 @@ firebase.url=https://child-focus-backend.firebaseio.com
 
 # Thymeleaf
 spring.thymeleaf.cache=false
+
+## MULTIPART (MultipartProperties)
+# Enable multipart uploads
+spring.servlet.multipart.enabled=true
+# Threshold after which files are written to disk.
+spring.servlet.multipart.file-size-threshold=2KB
+# Max file size.
+spring.servlet.multipart.max-file-size=5MB
+# Max Request Size
+spring.servlet.multipart.max-request-size=5MB
